# Master_Thesis_Noise

./: .gitignore  CMakeLists.txt  README.md  Result_parser.py  benchmark_I_averages.csv  benchmark_I_raw.csv  benchmark_Initiator_Noise_KEMNK_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMNK_Kyber512_ChaChaPoly_SHA256_raw.csv  benchmark_Initiator_Noise_KEMNN_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMNN_Kyber512_ChaChaPoly_SHA256_raw.csv  benchmark_Initiator_Noise_NN_25519_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_NN_25519_ChaChaPoly_SHA256_raw.csv  benchmark_PQ_I_averages.csv  benchmark_PQ_I_raw.csv  clean_log.txt  clean_log_I_Noise_KEMNN_Kyber512_ChaChaPoly_SHA256.txt  clean_log_I_Noise_NN_25519_ChaChaPoly_SHA256.txt  esp_zb_light.c  graph.py  mac_bench.txt  result_parser_complete_handshake.py  sdkconfig  sdkconfig.old
components/libsodium/: CMakeLists.txt
components/libsodium/libsodium/src/libsodium/crypto_pwhash/argon2/: argon2-fill-block-ref.c
components/noise-c/: CMakeLists.txt
main/: CMakeLists.txt  esp_zb_switch.c  esp_zb_switch.h  idf_component.yml  keys.c  keys.h  light_driver.c  light_driver.h  noise_log.h
results/Noise_IK_25519_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_IK_25519_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_IK_25519_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_IK_25519_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_IK_25519_ChaChaPoly_SHA256.txt
results/Noise_IN_25519_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_IN_25519_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_IN_25519_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_IN_25519_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_IN_25519_ChaChaPoly_SHA256.txt
results/Noise_KEMIK_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMIK_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMIK_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMIK_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMIK_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMIN_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMIN_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMIN_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMIN_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMIN_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMKK_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMKK_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMKK_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMKK_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMKK_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMKN_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMKN_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMKN_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMKN_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMKN_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMKX_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMKX_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMKX_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMKX_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMKX_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMNK_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMNK_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMNK_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMNK_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMNK_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMNN_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMNN_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMNN_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMNN_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMNN_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMNX_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMNX_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMNX_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMNX_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMNX_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMXK_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMXK_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMXK_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMXK_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMXK_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMXN_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMXN_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMXN_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMXN_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMXN_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KEMXX_Kyber512_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KEMXX_Kyber512_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KEMXX_Kyber512_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KEMXX_Kyber512_ChaChaPoly_SHA256_raw.csv  log_Initiator_Noise_KEMXX_Kyber512_ChaChaPoly_SHA256.txt
results/Noise_KK_25519_ChaChaPoly_SHA256/: benchmark_Initiator_Noise_KK_25519_ChaChaPoly_SHA256_averages.csv  benchmark_Initiator_Noise_KK_25519_ChaChaPoly_SHA256_medians.csv  benchmark_Initiator_Noise_KK_25519_ChaChaPoly_SHA256_raw.csv  (+1 more)
(+487 files in other folders)
